# Geo-App

./: .gitignore  README.md  docker-compose.yml
nest-api/: Dockerfile  jest.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
nest-api/src/: app.module.ts  main.ts
nest-api/src/geo/: geo.controller.ts  geo.dto.ts  geo.module.ts  geo.service.ts
nest-api/test/: geo.service.spec.ts
python-service/: Dockerfile  pyproject.toml  uvicorn.ini
python-service/app/: main.py  schemas.py
python-service/tests/: test_process.py
scripts/: test-coverage.bat  test-watch.bat  test.bat
web/: .dockerignore  Dockerfile  Dockerfile.test  package-lock.json  package.json  tsconfig.json
web/__tests__/: GeoProcessorApp.test.tsx  PointInputForm.test.tsx
web/app/: globals.css  layout.tsx  page.tsx
web/components/: GeoProcessorApp.tsx  MapView.tsx  PointInputForm.tsx
