[project]
name = "geo-processor"
version = "1.0.0"
description = "FastAPI service for centroid and bounds calculation"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "httpx==0.27.2",
  "pytest==8.3.3"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]